add plugin to config for gh

--- a/_config.yml
+++ b/_config.yml
@@ -20,6 +20,8 @@ github_username:  jekyll
 # Build settings
 markdown: kramdown
 
+gems:
+  - jekyll-contentful-data-import
 
 contentful:
   spaces:
