fix bundle command part 2

--- a/wercker.yml
+++ b/wercker.yml
@@ -21,7 +21,7 @@ build:
   # Read more about steps on our dev center:
   # http://devcenter.wercker.com/docs/steps/index.html
   steps:
-    - bundle install
+    - wercker/bundle-install@1.1.2
     - script:
       name: data
       code: bundle exec jekyll contentful --rebuild
