--- a/wercker.yml
+++ b/wercker.yml
@@ -21,10 +21,12 @@ build:
   # Read more about steps on our dev center:
   # http://devcenter.wercker.com/docs/steps/index.html
   steps:
-    - wercker/bundle-install@1.1.2
     - script:
-      name: data
-      code: bundle exec jekyll contentful --rebuild
+        name: prebuild
+        code: bundle config build.nokogiri --use-system-libraries && bundle install
     - script:
-      name: build
-      code: bundle exec jekyll build
+        name: data
+        code: bundle exec jekyll contentful --rebuild
+    - script:
+        name: build
+        code: bundle exec jekyll build
