--- a/wercker.yml
+++ b/wercker.yml
@@ -30,3 +30,21 @@ build:
     - script:
         name: build
         code: bundle exec jekyll build
+# Deploy!
+deploy :
+  steps :
+    - script:
+        name: Configure git
+        code: |-
+          git config --global user.email "paesku@gmail.com"
+          git config --global user.name "paesku"
+
+          # remove current .git folder
+          rm -rf .git
+    - script:
+        name: Deploy to github pages
+        code: |-
+          git init
+          git add .
+          git commit -m "deploy commit from $WERCKER_STARTED_BY"
+          git push -f $GIT_REMOTE master:gh-pages
