--- a/wercker.yml
+++ b/wercker.yml
@@ -32,8 +32,12 @@ build:
         code: bundle exec jekyll build
 # Deploy!
 deploy:
-  production:
-    - script:
-        name: deploy
-        code: echo production deploy
+  steps:
+   - install-packages:
+     packages: git ssh-client
+   - leipert/git-push:
+      gh_oauth: $GIT_AUTH
+      repo: paesku/content-test
+      branch: gh-pages
+      basedir: _site
 
